--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -824,6 +824,15 @@ year = {2018},
   publisher={Springer}
 }
 
+@inproceedings{leucker2011teaching,
+  title={Teaching runtime verification},
+  author={Leucker, Martin},
+  booktitle={International Conference on Runtime Verification},
+  pages={34--48},
+  year={2011},
+  organization={Springer}
+}
+
 @book{fritzson2011introduction,
   title={Introduction to modeling and simulation of technical and physical systems with Modelica},
   author={Fritzson, Peter},
