--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -22,12 +22,12 @@
 \coordenador{\prof \dr Ricardo Pezzuol Jacobi}{CIC/UnB}%
 \diamesano{11}{Novembro}{2022}%
 
-\membrobanca{\prof \dr Patrizio Pelliccione}{Gran Sasso Science Institute}%
+\membrobanca{\prof \dr Luís Paulo Faina Garcia}{CIC/UnB}%
 \membrobanca{\prof \dr Lars Grunske}{Humboldt-Universität zu Berlin}%
 
 \autor{João Paulo C. de}{Araujo}%
 
-\titulo{Enhancing Property Specification of Cyber-Physical Systems using Negative Selection}%
+\titulo{Enhancing Runtime Monitors of Cyber-Physical Systems using Negative Selection}%
 
 \palavraschave{Sistemas Cyber-físicos, Especificação de Propriedades, Seleção Negativa, Diagnóstico de Falhas, Verificação}%
 \keywords{Cyber-physical Sistems, Property Specification, Negative Selection, Fault Diagnosis, Verification}%
@@ -45,7 +45,7 @@
     \capitulo{1_Introduction}{Introduction}\label{sec:intro}
     \capitulo{2_Background}{Background}
     \capitulo{BSN}{Running Example: Body Sensor Network}
-    \capitulo{4_Proposal}{Enhancing Property Specification of Cyber-Physical Systems using Negative Selection}
+    \capitulo{4_Proposal}{Enhancing Runtime Monitors of Cyber-Physical Systems using Negative Selection}
     \capitulo{3_RelatedWork}{Related work}
     \capitulo{5_Evaluation}{Evaluation}
     \capitulo{6_Conclusion}{Conclusion and future work}
