--- a/tex/1_Introduction.tex
+++ b/tex/1_Introduction.tex
@@ -6,7 +6,7 @@
 
 %%%% Context %%%%
 % blablabla
-Cyber-physical systems are systems that integrate software components with physical processes \cite{lee2008cyber}. They are a definite reality in our day-to-day lives, specially in the recent years. It is fair to say that the development of autonomous systems and the Internet of Things has taken us quite near to the future visions we had a few decades ago. Flying cars, for example, were supplanted by unmanned aircraft and autonomous drones, for instance, although these technologies are now used for a variety of applications rather than just passenger transportation. The usage of CPSs is also increasing amongst sophisticated applications, whose domains include self-driving vehicles, smart homes, smart cities, and more.
+Cyber-physical systems are systems that integrate software components with physical processes \cite{lee2008cyber}. They are a definite reality in our day-to-day lives, especially in the recent years. It is fair to say that the development of autonomous systems and the Internet of Things have taken us quite near to the future visions we had a few decades ago. Flying cars, for example, were supplanted by unmanned aircraft and autonomous drones, for instance, although these technologies are now used for a variety of applications rather than just passenger transportation. The usage of CPSs is also increasing amongst sophisticated applications, whose domains include self-driving vehicles, smart homes, smart cities, and more.
 
 % safety-critical systems need assurances 
 Nevertheless, the complexity inherent of these domains raises some challanges. Unforeseen events, for example, might make the CPS unreliable at runtime, which could have disastrous effects. This is a fact, particularly for safety-critical systems, which are subject to strict safety rules, time limitations, and performance requirements, and whose malfunctions might potentially endanger the user's life. Such systems demand the provision of assurances to guarantee that the system's goals are met during its entire lifespan, from conception to operation. 
@@ -16,7 +16,7 @@ Nevertheless, the complexity inherent of these domains raises some challanges. U
 
 The Runtime Verification field \cite{colombo2021runtime} tries to address this problem. One of its techiniques relies on deriving a set of properties from the specification that formally describe how the system should behave. Then, runtime monitors are developed as a means to verify the satisfiability of each property while the CPS is being executed. The so called observers are state machines capable of performing the verification task by reading the log files, or the signals sent between the system modules. When a violation is spotted, an error state is reached. Nevertheless, in some cases, it might not be possible to wait for the CPS to be deployed and realize the verification afterwards, since it may potentially be costly or even harmful. The alternative, then, is to develop a model-based prototype of the system \cite{mohamed2021model}. In this case, the CPS would be modeled in a simulation environment, while still in the early stages of development, with the Runtime Verification monitors acting as observers to analyze the properties during the simulation.
 
-However, the CPS verification task is a difficult undertaking yet to be perfectly achieved \cite{patankar2020safety}. One of the reasons is that, when applications are first designed, the knowledge about the environment in which they will be deployed may be incomplete, and also subject to continuous change over the application's lifetime \cite{assurances2017}. This fact may affect the quality aspects of CPSs operation both at a physical and at a logical level, such as a freezing temperature affecting a sensor's capacity to deliver reliable data. Besides that, the complex relation between the cyber and physical aspects of the CPS contributes to the challenging task of monitoring such systems. While the physical process are modeled by acausal time-continuous equations, the discrete behavior of software components can be described as state machines \cite{Baheti2019CyberPhysicalS}. Other complexities are related to the dynamic behavior of the physical components, i.e. deterioration and malfunctioning, for instance.
+However, the CPS verification task is a difficult undertaking yet to be perfectly achieved \cite{patankar2020safety}. One of the reasons is that, when applications are first designed, the knowledge about the environment in which they will be deployed may be incomplete, and also subject to continuous change over the application's lifetime \cite{assurances2017}. This fact may affect the quality aspects of CPSs operation both at a physical and at a logical level, such as a freezing temperature affecting a sensor's capacity to deliver reliable data. Besides that, the complex relation between the cyber and physical aspects of the CPS contributes to the challenging task of monitoring such systems. While the physical process are modeled by time-continuous equations, the discrete behavior of software components can be described as state machines \cite{Baheti2019CyberPhysicalS}. Other complexities are related to the dynamic behavior of the physical components, i.e. deterioration and malfunctioning, for instance.
 
 All of that may cause the observers to miss out on some important aspects that should be considered when monitoring a property. In face of a faulty scenario, the system analyst might wonder "what caused the property violation?" or "which components or behaviors are related to violations of the property?". The intricate relation between the cybernetic and physical natures of CPS creates obstacles when obtaining the set of configurations or behaviors that lead the system to anomalous behavior. Trying to address this problem by debbuging the prototype can be a very time-consuming task, whithout any guarantees of solving it.
 
@@ -124,14 +124,14 @@ The Negative Selection Algorithm \cite{ICBook2009}, for example, is an immuno-ba
 
 In this work, we propose a methodology that aims at increasing the reliability of CPSs. This is achieved by a systematical diagnosis of system properties violations based on data generated by a protoype, performed in the early stages of development. The immuno-inspired algorithm called Negative Selection (NSA) serves as an analytical redundancy method to indicate the features or behaviors that account for property violations in the system. We believe that, by reasoning about why the property violations happen, the system specification and the property themselves may be refined, fault-tolerant mechanisms may be added, and, thus, safer and better applications might be written.
 
-The methodology is comprised of two main phases. In the first phase, a prototype of the system is implemented based on the specification of the system and a set of properties derived from it. The observers are also implemented in the prototy for the verification of the properties satisfiability during the simulantions. After that, several simulations are performed with varying configurations, input data and parameters in order to account for the context variability that may arise in runtime. 
+The methodology is comprised of two main phases. In the first phase, a prototype of the system is implemented based on the specification of the system and a set of properties derived from it. The observers are also implemented in the prototype for the verification of the properties satisfiability during the simulantions. After that, several simulations are performed with varying configurations, input data and parameters in order to account for the context variability that may arise at runtime. 
 
 
 % the system specification in the form of a Contextual Goal Model (CGM) is used as input to model the behavior of the system as timed automata. Then, by using pattern catalogs, real-time system properties are derived from the CGM and expressed as observer automata. The system model along with the observers, then, undergo a model checking process to assert the system's correctness and the satisfiability of the properties. Finally, 
 
-The second phase focus on the analysis of property violations in the data extracted from the prototype. The data, initially, is feature engineered and labeled as self or nonself, meaning regular data traces or faulty traces that incur in violation. Then, the NSA is executed by generating random detectors based on the features of the dataset. These detectors go through a censoring process, in which they are tested against the self data and are discarded if matched. The resulting set contains detectors specialized in matching nonself data which are carefully examined so that the patterns discovered can be comprehended. This process shares some similarities with the Analytical Redundancy Method \cite{gao2015survey}, since the pre-knowledge of a healthy system are the properties being verified against the prototype data. Hence, it allows for the reasoning about the causes of such violations, which can be used by the Analyst to enhance the sytem's specification, properties and the observers.
+In the second phase we perform the analysis of property violations in the data extracted from the prototype. The data, initially, is feature engineered and labeled as self or nonself, meaning regular data traces or faulty traces that incur in violation. Then, the NSA is executed by generating random detectors based on the features of the dataset. These detectors go through a censoring process, in which they are tested against the self data and are discarded if matched. The resulting set contains detectors specialized in matching nonself data which are carefully examined so that the patterns discovered can be comprehended. This process shares some similarities with the Analytical Redundancy Method \cite{gao2015survey}, since the pre-knowledge of a healthy system are the properties being verified against the prototype data. Hence, it allows for the reasoning about the causes of such violations, which can be used by the Analyst to enhance the sytem's specification, properties and the observers.
 
-The Biological immune system (BIS) not only provides the NSA technique, but also acts as a metaphore for the entire methodology. The initial phase can be related to the Innate Immunity response, since it is the first line of defense of the body. The prototype with the "naive" observers face the context variability without a refined knowledge, just as the nonspecific process of the human body. The antigens are seen here as the execution traces that incur in property violation. The operation data from the simulation follows to the second phase of our approach, which can be compared to the Adaptive Immunity response of the BIS. The biological system produces T cells, which are matured in the Thymus by a censoring process called Negative Selection, in which the lymphocytes are discarded if they strongly bind to proteins of the body. These matured white blood cells are then used by the body to combat pathogens. Analogously, the framework we are proposing uses the Negative Selection algorithm to create a set of random detectors, which are "matured" by being tested against the operation dataset from the prototype. These detectors, in turn, are used to enhance observer automata capable of acting with a more refined knowledge of the environment. 
+The Biological immune system (BIS) not only provides the NSA technique, but also acts as a metaphore for the entire methodology. The initial phase can be related to the Innate Immunity response, since it is the first line of defense of the body. The prototype with the "naive" observers face the simulated runtime scenarios without a refined knowledge, just as the nonspecific process of the human body. The antigens are seen here as the execution traces that incur in property violation. The operation data from the simulation follows to the second phase of our approach, which can be compared to the Adaptive Immunity response of the BIS. The biological system produces T cells, which are matured in the Thymus by a censoring process called Negative Selection, in which the lymphocytes are discarded if they strongly bind to proteins of the body. These matured white blood cells are then used by the body to combat pathogens. Analogously, the framework we are proposing uses the Negative Selection algorithm to create a set of random detectors, which are "matured" by being tested against the operation dataset from the prototype. These detectors, in turn, are used to enhance observer automata capable of acting with a more refined knowledge of the environment. 
 
 \section{Evaluation}
 
@@ -141,4 +141,4 @@ The simulations were performed by using a dataset of 1,000 randomly generated pa
 The NSA was evaluated regarding its generalization to unseen data. In this matter, all of the execution segments that the model identified as property violations found were, in fact, violations, accounting for a precision of 100\%. Nevertheless, some patterns were not detected by the algorithm, resulting in a recall rate of 0.9958. In addition, the analysis of the efficiency of the technique was performed based on the number of patterns found. The generated nonself detectors resulted in the discovery of 49 unveiled patterns related to faulty segments, which were grouped into 11 clusters based on similarity. 
 
 \section{Organization}
-The rest of the document is organized as follows. Chapter \ref{2_Background} introduces some concepts that are useful for the understanding of the framework. In Chapter \ref{sec:BSN} introduces the case study that will be followed along the work. Chapter \ref{4_Proposal} futher details the proposed approach. Chapter \ref{3_RelatedWork} show some works that are strongly related to our proposed methodology. Chapter \ref{5_Evaluation} presents the results of the work after the evaluation, while Chapter \ref{sec:Conclusion} concludes and provides the directions for future works.
+The rest of the document is organized as follows. Chapter \ref{2_Background} introduces some concepts that are useful for the understanding of the framework. In Chapter \ref{sec:BSN} introduces the case study that will be followed along the work. Chapter \ref{4_Proposal} futher details the proposed approach. Chapter \ref{3_RelatedWork} shows some works that are strongly related to our proposed methodology. Chapter \ref{5_Evaluation} presents the results of the work after the evaluation, while Chapter \ref{sec:Conclusion} concludes and provides the directions for future works.
