--- a/tex/3_RelatedWork.tex
+++ b/tex/3_RelatedWork.tex
@@ -59,7 +59,9 @@ In the proposed framework, the model checking process will be integrated with si
 
 \section{Fault Analysis and the Negative Selection}
 
-Fault detection and diagnosis is yet another way to increase the reliability of CPSs. Zhang et al. \cite{zhang2013sensor} suggests a model-based detection, isolation, and system reconfiguration techinque for induction motor drives dependant on extended EKF, as well as strong current and DC-link voltage observers, which allows the systems to continue its operation even under sensor faults. Poon et al. \cite{poon2016model} also relies on models to present a fault detection and identification (FDI) technique for switching power converters utilizing a model-based state estimator methodology, which boosts fault tolerance and awareness in power electronics systems. Garcia et al. \cite{garcia2022solar} provides a real-time monitoring and preventive fault diagnosis method for solar panel strings in real-world installations, through the identification and parametric separation of fault symptoms using Voc-Isc curve analysis. In this strategy, identification and isolation occur with sufficient leeway to notify and stop the deterioration phenomena and its cumulative impact, which would potentialy result in the formation of irreversible failure via automated disconnection.
+Another method for increasing the reliability of CPSs is fault detection, diagnosis and isolation (FDDI), which is conceptually similar to the assessment of property violations. Both are looking for techniques to determine whether and why the system is not operating as planned. In this sense, understanding which approaches are being utilized in the FDDI field may help us to better evaluate our methodology.
+
+Zhang et al. \cite{zhang2013sensor} suggests a model-based detection, isolation, and system reconfiguration techinque for induction motor drives dependant on extended EKF, as well as strong current and DC-link voltage observers, which allows the systems to continue its operation even under sensor faults. Poon et al. \cite{poon2016model} also relies on models to present a fault detection and identification (FDI) technique for switching power converters utilizing a model-based state estimator methodology, which boosts fault tolerance and awareness in power electronics systems. Garcia et al. \cite{garcia2022solar} provides a real-time monitoring and preventive fault diagnosis method for solar panel strings in real-world installations, through the identification and parametric separation of fault symptoms using Voc-Isc curve analysis. In this strategy, identification and isolation occur with sufficient leeway to notify and stop the deterioration phenomena and its cumulative impact, which would potentialy result in the formation of irreversible failure via automated disconnection.
 
 However, the success of traditional fault detection systems is determined by a number of elements, including prior knowledge of defective responses, an accurate system model, and a vast amount of data-history patterns. Furthermore, typical fault detection algorithms are often developed for a single system, thereby addressing a restricted number of defect types \cite{abid2020improved}.
 
@@ -76,7 +78,7 @@ Our approach makes use of the NSA in a similar way. The Hamming space is leverag
 
 Two other works are worth mentioning in this section. The first, Alizadeh et al. \cite{alizadeh2016negative} suggested a wind turbine defect diagnostic system that relies on real-valued NSA to boost nonself-space coverage. V-detectors are used for representing the detectors, the Euclidean distance is utilized for matching, and data are represented as spheres. The detection phase proceeds as default, but the isolation phase relies on the training of new instances of the NSA for each pre-defined fault, which are employed in a hierarchical manner to better describe identified faults. The second was proposed by Ren et al. \cite{ren2020novel} a different algorithm for fault discovery and isolation. In this paper, V-detectors are created in such a way that the detector's coverage is increased while the overlap is reduced. The detection phase contains no surprises, but the isolation phase relies on an algorithm that attempts to match the defect at hand with a collection of pre-identified fault representatives.
 
-Despite the fact that our technique, on the one hand, displays detectors as binary strings, which have well-known shortcomings in the literature, on the other hand, the explainability given by them eliminates the need for prior knowledge of the system's probable faults.
+Both frameworks use more advanced Negative Selection algorithms, that rely on real-valued data representation, while our approach still represents the data as binary strings. Nevertheless, even with the well-knwon shortcommings of the binary NSA, the explainability provided by the detectors eliminates the need for any prior knowledge of the system's probable faults.
 
 \section{Final Considerations on Related Works}
 
