--- a/tex/agradecimentos.tex
+++ b/tex/agradecimentos.tex
@@ -1,1 +1,3 @@
-Donec pellentesque, libero eu fermentum posuere, odio sapien blandit lacus, non tincidunt nibh mi id ante. Donec ac ligula sed eros condimentum dapibus molestie ultricies dui. Vestibulum nec luctus urna, ac finibus diam. Vivamus sapien lacus, pulvinar vel turpis sit amet, faucibus efficitur libero. Aliquam non nibh feugiat, luctus eros ac, pulvinar enim. Vestibulum a sem ac lacus tincidunt luctus. Ut dapibus, metus et consectetur venenatis, felis arcu ullamcorper neque, ultrices euismod nunc nibh in lectus. Suspendisse sem eros, lobortis ac tellus molestie, vestibulum rutrum mauris. Nunc congue pharetra erat. Mauris mi augue, euismod ut facilisis quis, rhoncus in velit. Vestibulum finibus tempus pulvinar. Mauris sodales sed urna vitae mattis.
+Thanks to God, and my savior Jesus Christ, for giving me a purpose and meaning in life. What is the point of searching for academic excellence? Or at least of trying to develop a good final project? In five hundred of years, no one will ever remember of the young kid from Brasilia who tried to do his best, pulling dozens of all-nighters and leaving his social life behind, neither of his work, for it will be totally outdated. I ask again, what is the meaning of all of it? I found that meaning in something greater than me. By looking at life through this materialistic lenses, I saw myself in complete desperation, lacking for something that nothing in this world would never satisfy, since any satisfaction I'd find was only temporary. I've found rest only in the words of a Jew who said: “Everyone who drinks this water will be thirsty again, but whoever drinks the water I give them will never thirst.” (John 4:13,14) He said that only him could provide me with everything I was searching for, namely, a purpose, and he provided it in the most unimaginable way: by excelling in all areas of his life here on earth and exchanging his perfect resume for my failed one in the cross, through sheer grace! He was everything I cannot be and achieved everything I cannot achieve. Now, I don't need to live by seeking for pleasures or finding significance through my performance, for I already have the ultimate pleasure in him and his perfect curriculum was graciously given to me. My life now is dedicated to follow him and to grow more likely to his character. If there is any aspect of this work that is good in any form, it is because of his kindness in providing me with wisdom and knowledge.
+    
+I also want to thank my wife Luiza, for being the one person who, even though did not know a thing about programming, patiently and diligently listened to detailed descriptions of the problems I've faced during the execution of this project. Thanks to Genaína, my professor adviser, who was attentive and available, answering my emails almost in real time, always receiving me with a smile in her face. Thanks to Arthur Rodrigues, a colleague who became a friend by walking the second mile to help me. Thanks also to my family for all the supporting me altruistically through the entire process.
